fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -86,7 +86,8 @@ main {
             }
 
             .pageviewsMobile, .pageviews {
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #505777;
                 text-transform: uppercase;
                 font-size: .9rem;
                 letter-spacing: 1.25px;
@@ -94,7 +95,8 @@ main {
             }
 
             .price {
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #505777;
                 display: flex;
                 align-items: center;
                 font-weight: 800;
@@ -118,7 +120,8 @@ main {
 
             span {
                 font-size: .7rem;
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #505777;
 
                 &.discountDesktop {
                     display: none;
@@ -126,7 +129,8 @@ main {
 
                 &.discountMobile, &.discountDesktop {
                     background: $light-grayish-red;
-                    color: $light-red;
+                    // color: $light-red;
+                    color: #CC3300;
                     padding: .3rem .4rem;
                     border-radius: 2rem;
                     font-size: .7rem;
@@ -243,7 +247,8 @@ main {
 
                 p {
                     font-size: .9rem;
-                    color: $grayish-blue;
+                    // color: $grayish-blue;
+                    color: #505777;
                 }
             }
         }
